--- a/views/user_add.html
+++ b/views/user_add.html
@@ -3,17 +3,46 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>新增用户</title>
-    <link rel="stylesheet" href="./css/bootstrap-3.2.0-dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-3.2.0-dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-3.2.0-dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="/css/app/register.css"/>
 </head>
 <body>
-<form method="post" action="./user_add">
-    <label>用户名：<input type="text" name="name"/></label><br/>
-    <label>密 码：<input type="password" name="password"/></label><br/>
-    <label>重复密码：<input type="password" name="password-repeat"/></label><br/>
-    <label>email：<input type="text" name="email"/></label><br/>
-    <label>年龄：<input type="text" name="age"/></label><br/>
-    <input type="submit" value="提交"/>
-</form>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+
+    <div class="container theme-showcase nav-top-margin" role="main">
+        <form method="post" action="./user_add">
+            <label>用户名：<input type="text" name="name"/></label><br/>
+            <label>密 码：<input type="password" name="password"/></label><br/>
+            <label>重复密码：<input type="password" name="password-repeat"/></label><br/>
+            <label>email：<input type="text" name="email"/></label><br/>
+            <label>年龄：<input type="text" name="age"/></label><br/>
+            <input type="submit" value="提交"/>
+        </form>
+    </div>
+
+<script type="text/javascript" src="/js/libs/jquery-1.11.0.js"></script>
+<script src="/css/bootstrap-3.2.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
