--- a/views/user_add.html
+++ b/views/user_add.html
@@ -32,13 +32,47 @@
     </div>
 
     <div class="container theme-showcase nav-top-margin" role="main">
-        <form method="post" action="./user_add">
-            <label>用户名：<input type="text" name="name"/></label><br/>
-            <label>密 码：<input type="password" name="password"/></label><br/>
-            <label>重复密码：<input type="password" name="password-repeat"/></label><br/>
-            <label>email：<input type="text" name="email"/></label><br/>
-            <label>年龄：<input type="text" name="age"/></label><br/>
-            <input type="submit" value="提交"/>
+        <form method="post" role="form" class="form-horizontal" action="./user_add">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">用户名：</label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" name="name"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">密 码：</label>
+                <div class="col-sm-4">
+                    <input type="password" class="form-control" name="password"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">重复密码：</label>
+                <div class="col-sm-4">
+                    <input type="password" class="form-control" name="password-repeat"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">email：</label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" name="email"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">年龄：</label>
+                <div class="col-sm-3">
+                    <input type="text"  class="form-control" name="age"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label"></label>
+                <div class="col-sm-3">
+                    <input type="submit" value="提交" class="btn btn-default"/>
+                </div>
+            </div>
+
         </form>
     </div>
 
