--- a/views/user_add.html
+++ b/views/user_add.html
@@ -33,17 +33,19 @@
 
     <div class="container theme-showcase nav-top-margin" role="main">
         <form method="post" role="form" class="form-horizontal" action="./user_add">
-            <div class="form-group">
+            <div class="form-group <% if(errMsg.name){ %>  has-error  <%}else{%>  <% } %>">
                 <label class="col-sm-2 control-label">用户名：</label>
                 <div class="col-sm-4">
                     <input type="text" class="form-control" name="name"/>
                 </div>
+                <span class="help-block"><%= errMsg.name||'' %></span>
             </div>
-            <div class="form-group">
+            <div class="form-group <% if(errMsg.password){ %>  has-error  <%}%>">
                 <label class="col-sm-2 control-label">密 码：</label>
                 <div class="col-sm-4">
                     <input type="password" class="form-control" name="password"/>
                 </div>
+                <span class="help-block"><%= errMsg.password||'' %></span>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">重复密码：</label>
@@ -52,18 +54,20 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group <% if(errMsg.email){ %>  has-error  <%}%>">
                 <label class="col-sm-2 control-label">email：</label>
                 <div class="col-sm-4">
                     <input type="text" class="form-control" name="email"/>
                 </div>
+                <span class="help-block"><%= errMsg.email||'' %></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group <% if(errMsg.age){ %>  has-error  <%}%>">
                 <label class="col-sm-2 control-label">年龄：</label>
                 <div class="col-sm-3">
                     <input type="text"  class="form-control" name="age"/>
                 </div>
+                <span class="help-block"><%= errMsg.age||'' %></span>
             </div>
 
             <div class="form-group">
@@ -75,6 +79,8 @@
 
         </form>
     </div>
+
+
 
 <script type="text/javascript" src="/js/libs/jquery-1.11.0.js"></script>
 <script src="/css/bootstrap-3.2.0-dist/js/bootstrap.js"></script>
