--- a/views/user/user_add.ejs
+++ b/views/user/user_add.ejs
@@ -1,35 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>新增用户</title>
-    <link rel="stylesheet" href="/css/bootstrap-3.2.0-dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/css/bootstrap-3.2.0-dist/css/bootstrap-theme.css"/>
-    <link rel="stylesheet" href="/css/app/register.css"/>
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">樯橹前端</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">主页</a></li>
-                    <li><a href="#about">博客</a></li>
-                    <li><a href="#contact">心情日志</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </div>
+<%- include ../header %>
 
     <div class="container theme-showcase nav-top-margin" role="main">
         <form method="post" role="form" class="form-horizontal" action="./user_add">
@@ -80,9 +49,4 @@
         </form>
     </div>
 
-
-
-<script type="text/javascript" src="/js/libs/jquery-1.11.0.js"></script>
-<script src="/css/bootstrap-3.2.0-dist/js/bootstrap.js"></script>
-</body>
-</html>
+<%- include ../footer %>
