--- a/views/user/user_list.ejs
+++ b/views/user/user_list.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<ul>
+<%- include ../header %>
+
+<ul class="nav-top-margin">
     <% for(var i = 0;i<userList.length ; i++){ %>
         <li>
             用户名：<%= userList[i].name %><br/>
@@ -14,5 +9,5 @@
         </li>
     <% } %>
 </ul>
-</body>
-</html>
+
+<%- include ../footer %>
