--- a/views/user/user_add.ejs
+++ b/views/user/user_add.ejs
@@ -42,7 +42,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label"></label>
                 <div class="col-sm-3">
-                    <input type="submit" value="提交" class="btn btn-default"/>
+                    <input type="submit" value="注册" class="btn btn-default"/>
                 </div>
             </div>
 
