--- a/views/user/user_login.ejs
+++ b/views/user/user_login.ejs
@@ -1,7 +1,7 @@
 <%- include ../header %>
 
 <div class="container theme-showcase nav-top-margin" role="main">
-    <form method="post" role="form" class="form-horizontal" action="./login_in">
+    <form method="post" role="form" class="form-horizontal" action="./user_login">
         <div class="form-group <% if(errMsg.name){ %>  has-error  <%}else{%>  <% } %>">
             <label class="col-sm-2 control-label">用户名：</label>
             <div class="col-sm-4">
