add login register btw

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,10 +23,17 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">主页</a></li>
+                <li class="active"><a href="/">主页</a></li>
                 <li><a href="#about">博客</a></li>
                 <li><a href="#contact">心情日志</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+
+            <div class="pull-right">
+                <a href="/user_login" class="btn btn-default btn-lg">登录</a>
+                <a href="/user_add" class="btn btn-default btn-lg">注册</a>
+            </div>
+
+        </div>
+
     </div>
 </div>
