--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,8 +28,7 @@
                 <li><a href="#contact">心情日志</a></li>
             </ul>
 
-            <div class="pull-right">
-
+            <div class="pull-right non-break">
                 <% if(name){ %>
                     <div class="user-name">欢迎光临 <%=name%> </div>
                     <a href="/user_login_out" class="btn btn-default btn-lg">退出</a>
