--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,17 @@
 <%- include header %>
 
 <div class="container nav-top-margin">
+    <%if(articleList){%>
+        <ul>
+        <%for(var i = 0;i<articleList.length;i++){%>
+            <li>
+                <h3><%=articleList[i].title%></h3>
+                <p><%=articleList[i].content%></p>
+                <p>发表时间：<%=articleList[i].postTime.getTime()%></p>
+            </li>
+        <%}%>
+        </ul>
+    <%}%>
 
 </div>
 
