--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,15 +19,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">樯橹前端</a>
+            <a class="navbar-brand" href="/">樯橹前端</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">主页</a></li>
-                <li><a href="#about">博客</a></li>
+                <li><a href="/article">博客</a></li>
                 <li><a href="#contact">心情日志</a></li>
             </ul>
-
             <div class="pull-right non-break">
                 <% if(name){ %>
                     <div class="user-name">欢迎光临 <%=name%> </div>
@@ -36,7 +35,6 @@
                     <a href="/user_login" class="btn btn-default btn-lg">登录</a>
                     <a href="/user_add" class="btn btn-default btn-lg">注册</a>
                 <%}%>
-
             </div>
         </div>
 
