--- a/views/user/user_list.ejs
+++ b/views/user/user_list.ejs
@@ -6,6 +6,7 @@
             用户名：<%= userList[i].name %><br/>
             email:<%= userList[i].email %><br/>
             年龄:<%= userList[i].age %><br/>
+            <img src="<%= userList[i].pic %>"/>
         </li>
     <% } %>
 </ul>
