--- a/views/article/article_add.ejs
+++ b/views/article/article_add.ejs
@@ -1,30 +1,35 @@
 <%- include ../header %>
 
 <div class="container theme-showcase nav-top-margin" role="main" xmlns="http://www.w3.org/1999/html">
-    <form method="post" role="form" class="form-horizontal" action="./article_add">
-        <div class="form-group">
-            <label class="col-sm-2 control-label">文章标题：</label>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" name="title"/>
-            </div>
-            <span class="help-block"></span>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">文章内容：</label>
-            <div class="col-sm-8">
-                <textarea class="form-control" name="content" rows="10"/></textarea>
-            </div>
-            <span class="help-block"></span>
-        </div>
+    <div class="row">
+        <div class="col-md-7 center-side">
+            <form method="post" role="form" class="form-horizontal" action="./article_add">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">文章标题：</label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" name="title"/>
+                    </div>
+                    <span class="help-block"></span>
+                </div>
 
-        <div class="form-group">
-            <label class="col-sm-2 control-label"></label>
-            <div class="col-sm-3">
-                <input type="submit" value="发表文章" class="btn btn-default"/>
-            </div>
-        </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">文章内容：</label>
+                    <div class="col-sm-8">
+                        <textarea class="form-control" name="content" rows="10"/></textarea>
+                    </div>
+                    <span class="help-block"></span>
+                </div>
 
-    </form>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label"></label>
+                    <div class="col-sm-3">
+                        <input type="submit" value="发表文章" class="btn btn-default"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <%- include ../side_right %>
+    </div>
 </div>
 
 <%- include ../footer %>
