--- a/views/user/user_login.ejs
+++ b/views/user/user_login.ejs
@@ -1,29 +1,33 @@
 <%- include ../header %>
 
 <div class="container theme-showcase nav-top-margin" role="main">
-    <form method="post" role="form" class="form-horizontal" action="./user_login">
-        <div class="form-group <% if(errMsg.name){ %>  has-error  <%}else{%>  <% } %>">
-            <label class="col-sm-2 control-label">用户名：</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" name="name"/>
-            </div>
-            <span class="help-block"><%= errMsg.name||'' %></span>
+    <div class="row">
+        <div class="col-md-7 center-side">
+            <form method="post" role="form" class="form-horizontal" action="./user_login">
+                <div class="form-group <% if(errMsg.name){ %>  has-error  <%}else{%>  <% } %>">
+                    <label class="col-sm-2 control-label">用户名：</label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" name="name"/>
+                    </div>
+                    <span class="help-block"><%= errMsg.name||'' %></span>
+                </div>
+                <div class="form-group <% if(errMsg.password){ %>  has-error  <%}%>">
+                    <label class="col-sm-2 control-label">密 码：</label>
+                    <div class="col-sm-4">
+                        <input type="password" class="form-control" name="password"/>
+                    </div>
+                    <span class="help-block"><%= errMsg.password||'' %></span>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label"></label>
+                    <div class="col-sm-3">
+                        <input type="submit" value="登录" class="btn btn-default"/>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="form-group <% if(errMsg.password){ %>  has-error  <%}%>">
-            <label class="col-sm-2 control-label">密 码：</label>
-            <div class="col-sm-4">
-                <input type="password" class="form-control" name="password"/>
-            </div>
-            <span class="help-block"><%= errMsg.password||'' %></span>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label"></label>
-            <div class="col-sm-3">
-                <input type="submit" value="登录" class="btn btn-default"/>
-            </div>
-        </div>
-
-    </form>
+        <%- include ../side_right %>
+    </div>
 </div>
 
 <%- include ../footer %>
