--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
                 <%}%>
             </ul>
             <%}%>
+
+            <%- include page%>
         </div>
         <%- include side_right %>
     </div>
